<resources>
    <string name="app_name">Signalo</string>

    <string name="version">v%s</string>
    <string name="buildNumber">(%1d)</string>
    <string name="action_settings">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Signalo</string>
    <string name="next">Weiter</string>
    <string name="previous">Zurück</string>

    <!-- Cellular Values-->
    <string name="card_value1">%s</string>
    <string name="card_value3">%s</string>
    <string name="card_value2">%s</string>
    <string name="card_value4">%s</string>

    <!--Cellular Descriptions-->
    <string name="card_description1">Netzbetreiber</string>
    <string name="card_description3">Frequenzband</string>
    <string name="card_description2">Funkstandard</string>
    <string name="card_description4">Cell ID (ECI)</string>

    <!--Wifi Values-->
    <string name="wifi_value_SSID">%s</string>
    <string name="wifi_value_freq">%s</string>
    <string name="wifi_value_encryptionType">%s</string>
    <string name="wifi_value_linkspeed">%s</string>

    <!--Wifi Descriptions-->
    <string name="wifi_desc_SSID">SSID</string>
    <string name="wifi_desc_freq">Frequenzband</string>
    <string name="wifi_desc_Channel">Verschlüsselung</string>
    <string name="wifi_desc_linkspeed">Linkspeed</string>

    <!--    Welcome Dialog -->
    <string name="welcome_dialog_heading">Willkommen bei Signalo!</string>
    <string name="erforderlich">Erforderlich</string>
    <string name="Datenschutz_Hinweis">Alle in dieser App erfassten Daten werden niemals weitergegeben oder verkauft. Die Daten werden ausschließlich auf deinem Gerät angezeigt und gespeichert.</string>

    <string name="permission_name2">Genauer Standort </string>
    <string name="permission_desc2">Ist erforderlich um die CellID sowie das Frequenzband anzuzeigen. Die Berechtigung dient nur dem Zugriff auf Netzwerk-Informationen, dein echter Standort wird nicht erfasst.</string>

    <string name="permission_name1">Telefon Status verwalten</string>
    <string name="permission_desc1">Ist erforderlich um die SIM-Karten-Erkennung (Dual-SIM) zu ermöglichen. Es wird nicht auf Telefonate zugegriffen.</string>

    <string name="info_btn_desc">Refresh Info Button</string>

    <string name="datenschutz1_desc"><b>Datensicherheit / Ort der Verarbeitung</b></string>
    <string name="datenschutz1_text">Die Signalo App ist eine Eigenentwicklung des App Centers (Team: IBS144) bei it@M. Die Verarbeitung und Speicherung der Daten erfolgt ausschließlich lokal auf deinem Gerät. \nEs werden niemals Daten weitergegeben, verkauft oder gesammelt. \nBei Fragen zu Verarbeitung der Daten kannst Du Dich gerne an uns wenden. :)</string>
    <string name="datenschutz2_desc">Kontaktinformationen</string>
    <string name="datenschutz2_text">Bei Fragen zu Verarbeitung der Daten kannst Du Dich gerne an das Gruppenpostfach apps@muenchen.de wenden. :)</string>
    <string name="impressum1_head"><b>Impressum:</b></string>
    <string name="impressum1_desc">it@M IBS144 AppCenter</string>
    <string name="impressum1_text"><b>Anschrift:</b> \nAgnes-Pockels-Bogen 33 \n80992 München</string>
    <string name="impressum2_text"><b>E-Mail:</b> \napps@muenchen.de</string>
    <string name="title_infodialog_refresh">Aktualisierung der Daten</string>
    <string name="description_infodialog_refresh"><![CDATA[Die Mobilfunk-Signalstärke (dbm-Wert) wird automatisch aktualisiert. Bei Wifi kann dies allerdings unregelmäßig sein. <br><br> Für eine manuelle Aktualisierung wische von oben nach unten. <b>Das ist nur alle 30 Sekunden möglich</b>.]]></string>
    <string name="message_cellid_missing_permission">(Berechtigung fehlt)</string>
    <string name="message_network_disconnected">Ausgewähltes Netzwerk ist nicht verbunden - OFFLINE</string>
    <string name="title_cooldown_info_button">Cooldown aktiv</string>
    <string name="description_cooldown_info_button"><![CDATA[Die WLAN-Signalstärke wurde soeben aktualisiert.<br><br> Um die Systemressourcen zu schonen, ist eine erneute Aktualisierung erst in <b>30 Sekunden</b> möglich. Das Schloss-Symbol verschwindet automatisch, sobald wieder aktualisieren werden kann.]]></string>
    <string name="sim_slot1_displayname">SIM1</string>
    <string name="sim_slot2_displayname">SIM2</string>
    <string name="opensource_Signalo_title"><b>Signalo Source Code</b></string>
    <string name="opensource_signalo_text1">Du kannst den Sourcecode von Signalo \njederzeit auf GitHub prüfen:</string>
    <string name="opensource_signalo_link">https://github.com/it-at-m/signalo</string>
    <string name="opensource_appache_title"><b>Apache License 2.0 Libraries</b></string>
    <string name="opensource_betterGauge_link">https://github.com/Magnus987/better-gauge-android/tree/Signalo</string>
    <string name="open_source_label">Open Source</string>

    <string name="feedback_head">Feedback?</string>
    <string name="feedback_text">Hast du Feedback oder Verbesserungsvorschläge? Melde dich gerne über GitHub:\nhttps://github.com/it-at-m/signalo/issues</string>

    <string name="datenschutz_impressum_label"><![CDATA[Datenschutz & Impressum]]></string>
    <string name="app_icon_desc">App Icon</string>
    <string name="app_logo_content_desc">App_Logo</string>
    <string name="optional">Optional</string>
    <string name="unknown_provider">Unbekannter Anbieter</string>
    <string name="location_services_missing"><![CDATA[Einige Informationen wie Frequenzband, Cell ID und SSID benötigen aktivierte Standortdienste. Auch der manuelle WLAN-Scan ist ohne Standort nicht möglich. <br><br> <b>Bitte aktiviere die Standortdienste in den Geräteeinstellungen</b>.]]></string>
    <string name="location_missing_dialog_title">Standortdienste sind ausgeschaltet</string>
    <string name="location_missing_dialog_settings">Einstellungen</string>
    <string name="refresh_message_missing_location">Bitte Standort aktivieren</string>

    <string name="speedtest_URL">https://speed.cloudflare.com/</string>
    <string name="speedtest_dialog_title">Externen Speedtest öffnen?</string>
    <string name="speedtest_dialog_message">Du wirst zu einem externen Speedtest-Anbieter (Cloudflare) weitergeleitet. Dabei verlässt du Signalo und es gelten die Datenschutzbestimmungen von Cloudflare.</string>
    <string name="speedtest_dialog_positive_button">Browser öffnen</string>
    <string name="speedtest_dialog_negative_button">Abbrechen</string>
    <string name="Speedtest_open_erorr">Kein Browser zum Öffnen des Speedtests gefunden</string>
    <string name="nav_drawer_speedtest_title">Externer Speedtest</string>
    <string name="nav_drawer_datenschutz_title"><![CDATA[Datenschutz & Impressum]]></string>
    <string name="welcom_dialog_skip">Überspringen</string>
    <string name="welcome_dialog_start">Starten</string>
    <string name="location_missing_value">[Standort benötigt]</string>
    <string name="permission_missing_value">[Berechtigung fehlt]</string>
    <string name="snapshots_fragment_lable">Snapshots</string>
    <string name="Input_Text_hint">Name des Snapshots</string>
    <string name="Input_text_Placeholder">Büro im 3. Stock</string>
    <string name="SnapshotDialogTitle">Snapshot benennen</string>
    <string name="Snapshot_Dialog_Message">Gib dem Snapshot einen Namen, damit du ihn später wiederfindest.</string>
    <string name="save">Sichern</string>
    <string name="hint">Hinweis:</string>
    <string name="Snapshot_on_save">Snapshot wurde gespeichert</string>
    <string name="encryption_info_message"><![CDATA[Snapshots werden <b>immer</b><br> verschlüsselt auf dem Gerät gespeichert. Der Schlüssel verlässt dein Gerät nie.<br><br> <b>Sicherheitsniveau auf diesem Gerät:</b><br><br>]]></string>
    <string name="encryption_info_strongbox"><![CDATA[<b>StrongBox:</b><br>Ein separater Sicherheitschip schützt den Schlüssel. (Extrem Sicher)]]></string>
    <string name="encryption_info_trusted_env"><![CDATA[<b>Trusted Execution Environment:</b><br>Ein abgeschotteter Bereich des Prozessors schützt den Schlüssel.]]></string>
    <string name="encryption_info_software"><![CDATA[<b>Software:</b><br>Der Schlüssel wird vom Betriebssystem verwaltet.]]></string>
    <string name="encryption_info_unknown_level"><![CDATA[<b>Unbekannt:</b><br>Bitte erstelle erst einen Snapshot, um das Sicherheitsniveau zu sehen.]]></string>
    <string name="encryption">Verschlüsselung</string>
    <string name="delete">Löschen</string>
    <string name="rename">Umbenennen</string>
    <string name="snapshot_list_delete_snapshot">Diesen Snapshot löschen</string>
    <string name="snapshot_deleted_toast">" wurde Gelöscht"</string>
    <string name="snapshot_item_delete_dialog_message">Der Snapshot \'%1$s\' wird unwiderruflich von diesem Gerät gelöscht.</string>
    <string name="snapshot_item_delete_dialog_title">Snapshot wirklich löschen?</string>
    <string name="snapshot_rename_dialog_message">Bitte geben sie den gewünschten neuen Namen ein</string>
    <string name="snapshot_rename_dialog_title">Snapshot Umbenennen</string>
    <string name="snapshot_rename_toast">Snapshot wurde erfolgreich Umbennant.</string>
    <string name="snapshots_empty_hint">Keine Snapshots bis jetzt.\nErstelle deinen ersten Snapshot und er wird hier angezeigt.</string>

</resources>