<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="de.muenchen.appcenter.signalo.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">

    </fragment>

    <fragment
        android:id="@+id/SnapshotList"
        android:name="de.muenchen.appcenter.signalo.SnapshotListFragment"
        android:label="@string/snapshots_fragment_lable"
        tools:layout="@layout/fragment_snapshot_list">

    </fragment>
    <fragment
        android:id="@+id/OpenSourceBib"
        android:name="de.muenchen.appcenter.signalo.OpenSourceBib"
        android:label="@string/open_source_label"
        tools:layout="@layout/fragment_open_source_bib">

    </fragment>
    <fragment
        android:id="@+id/DatenschutzPage"
        android:name="de.muenchen.appcenter.signalo.DatenschutzPage"
        android:label="@string/datenschutz_impressum_label"
        tools:layout="@layout/fragment_datenschutz_page">

    </fragment>

    <fragment
        android:id="@+id/SnapshotDisplay"
        android:name="de.muenchen.appcenter.signalo.SnapshotDisplayFragment"
        android:label="Snapshot Anzeige"
        tools:layout="@layout/fragment_snapshot_display">
        <argument
            android:name="creationDate"
            app:argType="long" />
        <action
            android:id="@+id/action_snapshotList_to_snapshotDisplay"
            app:destination="@id/SnapshotDisplay" />
    </fragment>
</navigation>